# ticket_raising

./: docker-compose.yml  package-lock.json
backend/auth_service/: .env  .env.example  celerybeat-schedule.dir  cleanup_db.py  pyproject.toml  requirements.txt  ruff.toml
backend/auth_service/src/: main.py
backend/auth_service/src/api/middleware/: error_handler.py
backend/auth_service/src/api/rest/: app.py
backend/auth_service/src/config/: settings.py
backend/auth_service/src/constants/: enum.py
backend/auth_service/src/core/exceptions/: auth.py
backend/auth_service/src/core/services/: auth_service.py
backend/auth_service/src/data/clients/: postgres_client.py
backend/auth_service/src/data/repositories/: base.py  token_repository.py  user_repository.py
backend/auth_service/src/observability/logging/: logger.py
backend/auth_service/src/schemas/: auth.py
backend/auth_service/src/utils/: security.py
backend/ticketing_service/: .env  Dockerfile  celerybeat-schedule.dir  main.py  pyproject.toml  requirements.txt
backend/ticketing_service/requirements/: base.txt
backend/ticketing_service/src/: celery_app.py  main.py
backend/ticketing_service/src/api/middleware/: __init__.py  cors.py  error_handler.py  jwt_middleware.py  logging.py  request_id.py
backend/ticketing_service/src/api/rest/: app.py  dependencies.py
backend/ticketing_service/src/config/: settings.py
backend/ticketing_service/src/constants/: enum.py
backend/ticketing_service/src/control/assignment_agent/: agent.py  tools.py  workflow.py
backend/ticketing_service/src/core/exceptions/: base.py
backend/ticketing_service/src/core/services/: agent_service.py  analytics_service.py  classification_service.py  keyword_rule_service.py  sla_rule_service.py  sla_service.py  ticket_service.py
backend/ticketing_service/src/core/tasks/: _loop.py  assignment_task.py  sla_tasks.py
backend/ticketing_service/src/data/clients/: auth_client.py  postgres_client.py
backend/ticketing_service/src/data/repositories/: agent_repository.py  analytics_repository.py  base_repo.py  escalation_repository.py  keyword_repository.py  notification_log_repository.py  (+6 more)
backend/ticketing_service/src/schemas/: agent_schema.py  analytics_schema.py  common.py  common_schema.py  keyword_rule_schema.py  sla_rule_schema.py  ticket.py  ticket_event.py  ticket_schema.py  user_schema.py
(+88 files in other folders)
